git commit -m "first commit"

--- a/index.html
+++ b/index.html
@@ -1153,7 +1153,7 @@
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form action="https://formsubmit.co/dilludilshith@gmail.com" method="POST" class="form" data-form>
+          <form action="https://formsubmit.co/9288de2b5e6e895089389e85e7153742" method="POST" class="form" data-form>
 
             <div class="input-wrapper">
               <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
