--- a/thanks.html
+++ b/thanks.html
@@ -56,10 +56,10 @@
     <div class="container">
         <h1>Thank You!</h1>
         <p>Your submission has been received successfully.</p>
-        <a href="/" class="button">Back to Home</a>
-        <div class="footer">
-            <p>&copy; 2024 Your Company Name. All rights reserved.</p>
-        </div>
+        <a href="index.html" class="button">Back to Home</a>
+        <!-- <div class="footer">
+            <p>&copy; Dilshith. All rights reserved.</p>
+        </div> -->
     </div>
 </body>
 </html>
