--- a/thanks.html
+++ b/thanks.html
@@ -56,7 +56,7 @@
     <div class="container">
         <h1>Thank You!</h1>
         <p>Your submission has been received successfully.</p>
-        <a href="index.html" class="button">Back to Home</a>
+        <a href="https://dilshithts.vercel.app/index.html" class="button">Back to Home</a>
         <!-- <div class="footer">
             <p>&copy; Dilshith. All rights reserved.</p>
         </div> -->
