--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vCard - Personal Portfolio</title>
+  <title>Dilshith T S</title>
 
   <!--
     - favicon
@@ -1128,7 +1128,8 @@
       </article>
 
 
-
+      
+      
 
 
       <!--
@@ -1163,7 +1164,7 @@
 
             <textarea name="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
             <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_next" value="https://dilshithts.vercel.app/thanks.html">
+            <input type="hidden" name="_next" value="https://dilshithts.vercel.app/">
             <button class="form-btn" type="submit" disabled data-form-btn>
               <ion-icon name="paper-plane"></ion-icon>
               <span>Send Message</span>
@@ -1173,7 +1174,7 @@
 
         </section>
 
-      </article>
+  
 
     </div>
 
