--- a/index.html
+++ b/index.html
@@ -1164,7 +1164,7 @@
 
             <textarea name="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
             <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_next" value="thanks.html">
+            <input type="hidden" name="_next" value="https://dilshithts.vercel.app/thanks.html">
             <button class="form-btn" type="submit" disabled data-form-btn>
               <ion-icon name="paper-plane"></ion-icon>
               <span>Send Message</span>
