--- a/thanks.html
+++ b/thanks.html
@@ -17,17 +17,14 @@
 </head>
 
 <body>
-  <main>
-    <article class="thank-you">
-      <header>
-        <h2 class="h2 article-title">Thank You!</h2>
-      </header>
-      <section class="thank-you-text">
-        <p>
-          Thank you for your message! We have received your submission and will get back to you shortly.
-        </p>
-      </section>
-    </article>
+  <main class="thank-you-page">
+    <div class="thank-you-container">
+      <h1 class="thank-you-title">Thank You!</h1>
+      <p class="thank-you-message">
+        We have received your message and appreciate you contacting us. We will get back to you as soon as possible.
+      </p>
+      <a href="index.html" class="home-link">Back to Home</a>
+    </div>
   </main>
 </body>
 
