--- a/thanks.html
+++ b/thanks.html
@@ -45,7 +45,7 @@
     <div class="container">
         <h1>Thank You!</h1>
         <p>Your details have been successfully submitted. I appreciate your interest and will get back to you as soon as possible.</p>
-        <p>In the meantime, feel free to <a href="mailto:your-email@example.com">contact me via email</a> if you have any questions.</p>
+        <p>In the meantime, feel free to <a href="https://github.com/abnormaldil">checkout my github</a> </p>
     </div>
 </body>
 </html>
