--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="ab.normal.dil">DILSHITH T S</h1>
+          <a href="index.html"><img src="images/logo.png" class="logo" style="width:131px;height:49.25px;"></a>
 
           <p class="title">Designer</p>
         </div>
